# RAG-Telecom-Company

./: .gitignore  CLAUDE.md  README.md  app.py  augment.py  config.py  generate.py  ingest_csv.py  ingest_db.py  ingest_pdf.py  main.py  pyproject.toml
RAG-Telecom-Factory/: retriever.py
data/: faq.csv  faq2.csv
python-dotenv/: main.py  pyproject.toml
